--- a/Park/Base.lproj/Main.storyboard
+++ b/Park/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="qj7-dj-5gh">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G1108" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="s73-ij-5e9">
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
@@ -638,6 +638,160 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="qQ2-z6-Je4" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="1997.5999999999999" y="-375.56221889055473"/>
+        </scene>
+        <!--MainVC-->
+        <scene sceneID="jbT-7C-Ugq">
+            <objects>
+                <viewController id="s73-ij-5e9" customClass="MainVC" customModule="Park" customModuleProvider="target" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="fUb-dv-j6I"/>
+                        <viewControllerLayoutGuide type="bottom" id="Chl-Cv-UJN"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="Pjb-N0-kQj">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="bXS-sN-eQJ">
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="park" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Z4G-AX-NuK">
+                                        <frame key="frameInset" minX="130" minY="23" width="114" height="36"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="Futura-MediumItalic" family="Futura" pointSize="27"/>
+                                        <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.8980392157" green="0.45098039220000002" blue="0.45098039220000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="90" id="tvJ-qF-ycz"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="p4x-aZ-k1P">
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ikd-pS-yB8" customClass="CustomButton" customModule="Park" customModuleProvider="target">
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="73" id="8FO-R2-UHv"/>
+                                            <constraint firstAttribute="height" constant="66" id="y4I-dy-kDo"/>
+                                        </constraints>
+                                        <state key="normal" title="Map"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="8"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="borderWidth">
+                                                <real key="value" value="0.0"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="iWo-qW-iVp" customClass="CustomButton" customModule="Park" customModuleProvider="target">
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="73" id="hcQ-iM-ptC"/>
+                                            <constraint firstAttribute="height" constant="66" id="khk-NR-Fep"/>
+                                        </constraints>
+                                        <state key="normal" title="Meter"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="8"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O7z-Sr-rvs" customClass="CustomButton" customModule="Park" customModuleProvider="target">
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="73" id="O5x-Sr-EIc"/>
+                                            <constraint firstAttribute="height" constant="66" id="XUk-OI-eef"/>
+                                        </constraints>
+                                        <state key="normal" title="Notes"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="8"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="HrK-QV-mho" customClass="CustomButton" customModule="Park" customModuleProvider="target">
+                                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="66" id="AJk-di-njg"/>
+                                            <constraint firstAttribute="width" constant="73" id="Ljd-yu-gk4"/>
+                                        </constraints>
+                                        <state key="normal" title="Trash"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="8"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                        <connections>
+                                            <action selector="deleteParkingSpotBtnPressed:" destination="s73-ij-5e9" eventType="touchUpInside" id="6Vx-v9-eoz"/>
+                                        </connections>
+                                    </button>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="537 Greene Ave" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dcb-lM-elG">
+                                        <frame key="frameInset" minX="29" minY="20" width="180" height="36"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Brooklyn, NY 11216" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VfH-sn-hsY">
+                                        <frame key="frameInset" minX="29" minY="54" width="180" height="21"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <fontDescription key="fontDescription" name="Futura-Medium" family="Futura" pointSize="14"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" red="0.92219551282051282" green="0.92219551282051282" blue="0.92219551282051282" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="bottom" secondItem="HrK-QV-mho" secondAttribute="bottom" constant="8" id="3WL-fR-UeM"/>
+                                    <constraint firstItem="iWo-qW-iVp" firstAttribute="leading" secondItem="ikd-pS-yB8" secondAttribute="trailing" constant="8" id="Ko2-yH-QSd"/>
+                                    <constraint firstItem="O7z-Sr-rvs" firstAttribute="leading" secondItem="iWo-qW-iVp" secondAttribute="trailing" constant="8" id="Njb-IK-oo1"/>
+                                    <constraint firstAttribute="bottom" secondItem="iWo-qW-iVp" secondAttribute="bottom" constant="8" id="Sr8-qi-e8X"/>
+                                    <constraint firstAttribute="bottom" secondItem="O7z-Sr-rvs" secondAttribute="bottom" constant="8" id="dC4-0B-0cM"/>
+                                    <constraint firstItem="ikd-pS-yB8" firstAttribute="bottom" secondItem="p4x-aZ-k1P" secondAttribute="bottomMargin" id="fnN-xY-orE"/>
+                                    <constraint firstItem="ikd-pS-yB8" firstAttribute="leading" secondItem="p4x-aZ-k1P" secondAttribute="leading" constant="29" id="p9I-Vu-9r9"/>
+                                    <constraint firstAttribute="bottom" secondItem="ikd-pS-yB8" secondAttribute="bottom" constant="8" id="vJS-8A-T2t"/>
+                                    <constraint firstItem="HrK-QV-mho" firstAttribute="leading" secondItem="O7z-Sr-rvs" secondAttribute="trailing" constant="8" id="z9O-Yl-4jP"/>
+                                </constraints>
+                            </view>
+                            <mapView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" mapType="standard" translatesAutoresizingMaskIntoConstraints="NO" id="PDy-ij-ifz"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="0kf-rh-wmi">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="40" id="bq0-Y8-5Bi"/>
+                                    <constraint firstAttribute="width" constant="40" id="uTl-MI-H8C"/>
+                                </constraints>
+                                <state key="normal" title="Button" image="car-outline"/>
+                                <connections>
+                                    <action selector="parkCarBtnPressed:" destination="s73-ij-5e9" eventType="touchUpInside" id="wVX-3h-oau"/>
+                                </connections>
+                            </button>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstAttribute="trailing" secondItem="p4x-aZ-k1P" secondAttribute="trailing" id="6Ji-Km-kUM"/>
+                            <constraint firstItem="0kf-rh-wmi" firstAttribute="trailing" secondItem="Pjb-N0-kQj" secondAttribute="trailingMargin" id="9uC-yY-V1y"/>
+                            <constraint firstItem="bXS-sN-eQJ" firstAttribute="leading" secondItem="Pjb-N0-kQj" secondAttribute="leading" id="FeS-Ff-SXb"/>
+                            <constraint firstItem="PDy-ij-ifz" firstAttribute="top" secondItem="p4x-aZ-k1P" secondAttribute="bottom" id="Kcl-1B-3rz"/>
+                            <constraint firstAttribute="trailing" secondItem="bXS-sN-eQJ" secondAttribute="trailing" id="MCj-SP-Xpq"/>
+                            <constraint firstItem="Chl-Cv-UJN" firstAttribute="top" secondItem="p4x-aZ-k1P" secondAttribute="bottom" constant="362" id="V5Z-FX-8iZ"/>
+                            <constraint firstItem="bXS-sN-eQJ" firstAttribute="top" secondItem="Pjb-N0-kQj" secondAttribute="top" id="bxs-bj-yyY"/>
+                            <constraint firstItem="p4x-aZ-k1P" firstAttribute="top" secondItem="bXS-sN-eQJ" secondAttribute="bottom" id="fZ5-Ta-fLJ"/>
+                            <constraint firstItem="p4x-aZ-k1P" firstAttribute="leading" secondItem="Pjb-N0-kQj" secondAttribute="leading" id="qlR-2V-syo"/>
+                            <constraint firstItem="PDy-ij-ifz" firstAttribute="leading" secondItem="Pjb-N0-kQj" secondAttribute="leading" id="rbX-G6-kWy"/>
+                            <constraint firstItem="Chl-Cv-UJN" firstAttribute="top" secondItem="0kf-rh-wmi" secondAttribute="bottom" constant="20" id="sW8-uS-Ovs"/>
+                            <constraint firstItem="Chl-Cv-UJN" firstAttribute="top" secondItem="PDy-ij-ifz" secondAttribute="bottom" id="t3I-nj-n5F"/>
+                            <constraint firstAttribute="trailing" secondItem="PDy-ij-ifz" secondAttribute="trailing" id="xI1-pX-pBd"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="cityAddress" destination="VfH-sn-hsY" id="GX5-bO-qwb"/>
+                        <outlet property="mapview" destination="PDy-ij-ifz" id="ACy-Qc-1vy"/>
+                        <outlet property="streetAddress" destination="dcb-lM-elG" id="MxL-hm-rXw"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="xXl-HC-tqu" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="3320.8000000000002" y="-372.86356821589209"/>
         </scene>
     </scenes>
     <resources>
