Fixed bug to prevent observers getting called multiple times

--- a/Park/Base.lproj/Main.storyboard
+++ b/Park/Base.lproj/Main.storyboard
@@ -212,7 +212,7 @@
                                             </userDefinedRuntimeAttribute>
                                         </userDefinedRuntimeAttributes>
                                         <connections>
-                                            <action selector="meterBtnPressed:" destination="s73-ij-5e9" eventType="touchUpInside" id="SRb-rB-0kb"/>
+                                            <segue destination="jB5-bc-nZP" kind="show" id="qPr-u5-Lc1"/>
                                         </connections>
                                     </button>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="O7z-Sr-rvs" customClass="CustomButton" customModule="Park" customModuleProvider="target">
