--- a/Park/Base.lproj/Main.storyboard
+++ b/Park/Base.lproj/Main.storyboard
@@ -288,7 +288,7 @@
                         <viewControllerLayoutGuide type="top" id="9pM-bT-Txf"/>
                         <viewControllerLayoutGuide type="bottom" id="KK4-N5-x7g"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="vBs-5G-uRa" customClass="date">
+                    <view key="view" contentMode="scaleToFill" id="vBs-5G-uRa">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
